src/assets/css/style.css
/*@ RESET */
* {
    box-sizing: border-box;
}

*,
*::before,
*::after {
    box-sizing: inherit;
}

ul {
    padding-left: 0;
}

li {
    list-style-type: none;
}

body {
    margin: 0;
}


/*@ GENERAL */
:root {
    --layout-margin: 4em;
    --primary-text-color: rgb(55, 55, 55);
    --heading-text-color: rgb(26 26 26);
    --frame-color: rgb(10 10 10);
    --cto-text: #ffffff;
    --blue: #007acc;
    --red: #bc3315;
    --red-dark: #942911;
    --background: #ffffff;
}

html {
    background: var(--frame-color);
    font-family: sans-serif;
    color: var(--primary-text-color);
}

body {
    margin: min(21px, 1vw);
    background: var(--background);
}

main {
    padding-bottom: 5em;
    max-width: 60vw;
    margin: 0 auto;
    line-height: 1.5;
}

h1 {
    font-size: 2.5rem;
    padding: 0.6em 0em;
    color: var(--heading-text-color);
}

h2 {
    padding-top: 1em;
}

a {
    color: var(--blue);
    text-decoration: underline;
}

a:hover {
    color: inherit;
    text-decoration: none;
}

.main-wrapper {
    padding-left: 5vw;
    padding-right: 5vw;
    text-align: center;
}

/*@ HEADER */
header {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    padding-top: min(5vw, 2em);
    padding-bottom: 1.5em;
    border-bottom: 1px solid;
}

header a {
    display: block;
}


/*@ SITE MENU */
.site-menu nav {
    padding-top: 1em;
    padding-bottom: 1em;
}

.site-menu ul {
    display: flex;
    justify-content: center;
    font-size: 1.8vw;
}

.site-menu a {
    padding-left: 1em;
    padding-right: 1em;
    text-decoration: none;
    color: inherit;
}

.site-menu a:hover {
    color: var(--blue);
}


/*@ FOOTER */
footer {
    border-top: 1px solid;
}

footer li {
    line-height: 2;
}

footer a {
    color: inherit;
}

footer a:hover {
    opacity: 0.6;
}

footer nav:not(:last-child) {
    padding-top: 2em;
}

.legal,
.copyright {
    padding-top: 2em;
    padding-bottom: 2em;
}


/*@ HOME PAGE */
.speech {
    line-height: 2;
    max-width: 800px;
    margin: 0 auto;
}


/*@ ABOUT PAGE */
.about img {
    max-width: 60%;
    max-height: 70vh;
}


/*@ CONTACT PAGE */
.contact-page {
    text-align: start;
}

.contact-page ul {
    padding-left: 1em;
}

.contact-page li {
    list-style-type: disc;
}


/*@ REVIEWS */
.review {
    text-align: start;
    margin: 0 auto;
    width: 800px;
}

.one-of-many {
    border: 1px solid #8c8989;
    border-radius: 16px;
    margin: 50px 0;
    padding: 10px 20px;
}


/*@ VIDEO */
video {
    width: 100%;
}

video a {
    color: var(--blue);
    text-transform: uppercase;
    text-decoration: none;
}

video a:hover {
    text-decoration: underline;
}


/*@ CTO */
.cto a {
    display: inline-block;
    margin-top: 1.5em;
    margin-bottom: 1.5em;
    padding: 6px 24px;
    background-color: var(--red);
    border: 1px solid var(--red-dark);
    border-radius: 6px;
    color: var(--cto-text);
    line-height: 1.75;
    text-decoration: none;
    cursor: pointer;
}


/*@ SERVICES GALLERY */
.services-gallery nav {
    margin: auto;
    max-width: 800px;
}

.services-gallery ul {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 2em;
}

.services-gallery a {
    color: inherit;
    text-decoration: none;
    box-shadow: none
}

.services-gallery a:hover,
.services-gallery a:active {
    text-decoration: underline;
}

.services-gallery li {
    --border-radius: 8px;
    border-radius: var(--border-radius);
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    text-align: center;
}

.services-gallery img {
    border-radius: var(--border-radius) var(--border-radius) 0 0;
}

.services-gallery h3 {
    font-weight: 600;
    font-style: normal;
    font-family: serif;
}


/*@ RELATED ARTICLES */
.related-articles {
    text-align: left;
}
.related-articles li {
    list-style-type: disc;
}

@media only screen and (max-width: 500px){
    body {
        margin: 0;
    }
}

@media only screen and (max-width: 800px){
    .site-menu ul {
        display: initial;
        font-size: 1em;
    }

    .site-menu li {
        padding-top: 0.5em;
    }
}

